--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@ type:当前用户类型，1为买家，0为卖家
 <div class="main">
     {% block main %}{% endblock %}
 <div class="back-button-box">
-    <button class="back-button" onclick="history.back()"></button>
+    <button class="back-button" onclick="history.back()">Back</button>
 </div>
 </div>
 </body>
