--- a/templates/sellerInfo.html
+++ b/templates/sellerInfo.html
@@ -19,6 +19,7 @@ name:当前用户name
 {% block script %}
     <script>
 
+    {#session load—————————————————————————————————————————————————————————————————————————————————————————#}
     $(document).on("sessionLoaded", function() {
         
         info();
@@ -30,9 +31,11 @@ name:当前用户name
             add();
         })
     });
+
+    {#卖家信息方法————————————————————————————————————————————————————————————————————————————————————————————#}
     function info(){
         {#清除dom#}
-        $(".container").innerText='';
+        $(".container").empty();
 
         $.ajax({
             url:"/seller/sellerInfo",
@@ -41,15 +44,14 @@ name:当前用户name
             dataType: "json",
             data:{phone:phone},
             success:function (data){
+                {#卖家名称———————————————————————————————————————————————————————————————————————————————————#}
                 const name_div = document.createElement("div");
                 const name_label = document.createElement("label")
                 const name_input = document.createElement("input");
 
                 name_div.setAttribute("class", "info-div");
                 name_div.setAttribute("id", "name-div");
-
                 name_label.innerText = "Name: "
-
                 name_input.setAttribute("type", "text");
                 name_input.setAttribute("value", data.name);
                 name_input.setAttribute("id", "name");
@@ -58,32 +60,25 @@ name:当前用户name
                 name_label.append(name_input)
                 $(".container").append(name_div);
 
+                {#卖家电话———————————————————————————————————————————————————————————————————————————————————#}
                 const phone_div = document.createElement("div");
-                const phone_label = document.createElement("label")
-                const phone_input = document.createElement("input");
+                const phone_span = document.createElement("label")
 
                 phone_div.setAttribute("class", "info-div");
                 phone_div.setAttribute("id", "phone-div");
+                phone_span.innerText = "Phone: "+phone;
 
-                phone_label.innerText = "Phone: ";
-
-                phone_input.setAttribute("type", "text");
-                phone_input.setAttribute("value", data.phone);
-                phone_input.setAttribute("id", "phone");
-
-                phone_div.append(phone_label);
-                phone_label.append(phone_input)
+                phone_div.append(phone_span);
                 $(".container").append(phone_div);
 
+                {#卖家介绍———————————————————————————————————————————————————————————————————————————————————#}
                 const introduction_div = document.createElement("div");
                 const introduction_label = document.createElement("label")
                 const introduction_input = document.createElement("input");
 
                 introduction_div.setAttribute("class", "info-div");
                 introduction_div.setAttribute("id", "introduction-div");
-
                 introduction_label.innerText = "Introduction: ";
-
                 introduction_input.setAttribute("type", "text");
                 introduction_input.setAttribute("value", data.introduction);
                 introduction_input.setAttribute("id", "introduction");
@@ -92,16 +87,14 @@ name:当前用户name
                 introduction_label.append(introduction_input);
                 $(".container").append(introduction_div);
 
-
+                {#卖家密码———————————————————————————————————————————————————————————————————————————————————#}
                 const password_div = document.createElement("div");
                 const password_label = document.createElement("label")
                 const password_input = document.createElement("input");
 
                 password_div.setAttribute("class", "info-div");
                 password_div.setAttribute("id", "password-div");
-
                 password_label.innerText = "Password: ";
-
                 password_input.setAttribute("type", "text");
                 password_input.setAttribute("id", "password");
 
@@ -109,8 +102,12 @@ name:当前用户name
                 password_label.append(password_input);
                 $(".container").append(password_div);
 
+                {#卖家提交按钮———————————————————————————————————————————————————————————————————————————————————#}
                 const submit_div = document.createElement("div");
-                submit_div.onclick = function (){
+                const submit_button = document.createElement("button");
+
+                submit_button.innerText = "Confirm";
+                submit_button.onclick = function (){
                     $.ajax({
                         url:'/modifySellerInfo',
                         type:'get',
@@ -127,57 +124,73 @@ name:当前用户name
                         }
                     })
                 }
+                submit_div.append(submit_button);
                 $(".container").append(submit_div);
             }
         })
 
 
+    {#添加商品方法————————————————————————————————————————————————————————————————————————————————————————————#}
     }
     function add(){
         {#清除dom#}
-        $(".container").innerText='';
+        $(".container").empty();
 
-        const item_name = "";
+        {#添加新物品——————图片————————————————————————————————————————————————————————————————————————————————#}
+        const img_div = document.createElement("div");
+        const img_input = document.createElement("input");
+
+        img_div.setAttribute("class", "add-div");
+        img_div.setAttribute("id", "img-div");
+        img_input.setAttribute("id", "file");
+        img_input.setAttribute("type", "file");
+        img_input.onchange = function (){
+            upload()
+        };
+
+        img_div.append(img_input);
+        $(".container").append(img_div);
+
+        {#添加新物品——————名称————————————————————————————————————————————————————————————————————————————————#}
         const item_name_div = document.createElement("div");
         const item_name_input = document.createElement("input");
         
         item_name_div.setAttribute("class", "add-div");
         item_name_div.setAttribute("id", "item_name-div");
         item_name_input.setAttribute("id", "item_name");
+        item_name_input.setAttribute("placeHolder", "name");
         
         item_name_div.append(item_name_input);
         $(".container").append(item_name_div);
 
-        const src_div = document.createElement("div");
-        const src_input = document.createElement("input");
-        
-        src_div.setAttribute("class", "add-div");
-        src_div.setAttribute("id", "src-div");
-        src_input.setAttribute("id", "src");
-        
-        src_div.append(src_input);
-        $(".container").append(src_div);
 
+        {#添加新物品——————库存————————————————————————————————————————————————————————————————————————————————#}
         const storage_div = document.createElement("div");
         const storage_input = document.createElement("input");
         
         storage_div.setAttribute("class", "add-div");
         storage_div.setAttribute("id", "storage-div");
         storage_input.setAttribute("id", "storage");
+        storage_input.setAttribute("placeHolder", "storage");
         
         storage_div.append(storage_input);
         $(".container").append(storage_div);
 
+
+        {#添加新物品——————介绍————————————————————————————————————————————————————————————————————————————————#}
         const introduction_div = document.createElement("div");
         const introduction_input = document.createElement("input");
         
         introduction_div.setAttribute("class", "add-div");
         introduction_div.setAttribute("id", "introduction-div");
         introduction_input.setAttribute("id", "introduction");
+        introduction_input.setAttribute("placeHolder", "introduction");
         
         introduction_div.append(introduction_input);
         $(".container").append(introduction_div);
 
+
+        {#添加新物品——————价格————————————————————————————————————————————————————————————————————————————————#}
         const price_div = document.createElement("div");
         const price_input = document.createElement("input");
         
@@ -185,21 +198,27 @@ name:当前用户name
         price_div.setAttribute("id", "price-div");
         price_input.setAttribute("type", "price");
         price_input.setAttribute("id", "price");
+        price_input.setAttribute("placeHolder", "price");
         
         price_div.append(price_input);
         $(".container").append(price_div);
 
+
+        {#添加新物品——————提交按钮——————————————————————————————————————————————————————————————————————————————#}
         const submit_div = document.createElement("div");
-        submit_div.onclick = function (){
+        const submit_button = document.createElement("button");
+
+        submit_button.innerText = "Confirm";
+        submit_button.onclick = function (){
             $.ajax({
-                url:'/addItem',
+                url:'/seller/addItem',
                 type:'get',
                 data:{
                     phone:phone,
                     price:$("#price").val(),
                     storage:$("#storage").val(),
                     item_name:$("#item_name").val(),
-                    src:$("#src").val(),
+                    src:$("#img").val(),
                     introduction:$("#introduction").val(),
                 },
                 success:function (data){
@@ -207,6 +226,26 @@ name:当前用户name
                 }
             })
         }
+        submit_div.append(submit_button);
+        $(".container").append(submit_div);
+    }
+
+    {#上传图片方法————————————————————————————————————————————————————————————————————————————————————————————#}
+    function upload(){
+        $.ajax({
+            url:"/images/upload_image",
+            type:"post",
+            data:{
+                file:$("#file")[0].files[0],
+                product_id:"{{ product_id }}",
+            },
+            dataType:"text",
+            processData:false,
+            contentType:false,
+            success:function (data){
+                {#$("#show-img").attr("src", data.image_src)#}
+            }
+        })
     }
     </script>
 {% endblock %}
