--- a/templates/item.html
+++ b/templates/item.html
@@ -9,6 +9,30 @@
 
     let belong;
 
+    window.onload = function () {
+        $(document).on("sessionLoaded", function () {
+
+            {#页面渲染开始——————————————————————————————————————————————————————————————————————————————————————————#}
+            is_item_match_seller()
+
+            render_item_data();
+            {#基础comment#}
+            render_comment();
+
+            {#buyer 购买#}
+            {% if belong==false %}
+                render_buyer_box();
+            {% endif %}
+
+            {#buyer#}
+            {#    评论悬浮框#}
+            if (type === "1") {
+                render_self_comment();
+            }
+        {#    页面渲染结束——————————————————————————————————————————————————————————————————————————————————————————#}
+        });
+    }
+
     function is_item_match_seller(){
         $.ajax({
             url:"/shop/isItemMatchSeller",
@@ -32,6 +56,7 @@
         $(".item-rating").empty();
         $(".item-price").empty();
         $(".item-storage").empty();
+
         $.ajax({
             url: "/products/itemInfoById",
             type: "get",
@@ -198,6 +223,12 @@
                     const comment = data[i];
                     const comment_div = document.createElement("div");
                     comment_div.setAttribute("class", "comment");
+                    comment_div.onmouseover = function (){
+                        comment_div.style.display = "block";
+                    }
+                    comment_div.onmouseout = function (){
+                        comment_div.style.display = "none";
+                    }
 
                     const comment_rating_div = document.createElement("div");
                     comment_rating_div.setAttribute("class", "comment-rating");
@@ -221,35 +252,6 @@
             }
         })
     }
-    $(document).on("sessionLoaded", function() {
-
-        is_item_match_seller()
-
-        render_item_data();
-        {#基础comment#}
-        render_comment();
-
-        {#buyer 购买#}
-        {% if belong==false %}
-            render_buyer_box();
-        {% endif %}
-
-{#    鼠标下拉并展示更多comment#}
-        if (phone!==null) {
-            $(".item-comment-box").scroll(function () {
-                if ($(this).scrollTop() + $(this).height() === $(document).height()) {
-                    console.log(1)
-                }
-            })
-
-        }
-
-        {#buyer#}
-{#    评论悬浮框#}
-        if (type === "1"){
-            render_self_comment();
-        }
-    });
     </script>
 {% endblock %}
 
@@ -288,6 +290,11 @@
 </div>
 <div class="right-box">
     <div class="item-comment-box"></div>
+    <div class="commenter_window"></div>
     <div class="self-comment-box"></div>
+</div>
+
+<div class="back-button-box">
+    <button class="back-button" onclick="history.back()">Back</button>
 </div>
 {% endblock %}
