--- a/templates/base_begin.html
+++ b/templates/base_begin.html
@@ -8,4 +8,7 @@
     <div class="right-box">
         {% block right_box %} {% endblock %}
     </div>
+    <div class="back-button-box">
+        <button class="back-button" onclick="history.back()">Back</button>
+    </div>
 {% endblock %}
