--- a/templates/base_personInfo.html
+++ b/templates/base_personInfo.html
@@ -29,4 +29,8 @@
     <div class="body">
         {% block body %}{% endblock %}
     </div>
+
+    <div class="back-button-box">
+        <button class="back-button" onclick="history.back()">Back</button>
+    </div>
 {% endblock %}
