--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,9 @@ type:当前用户类型，1为买家，0为卖家
                     user_box.append(a)
 
                     $(document).trigger("sessionLoaded");
+                },
+                error:function (){
+                    $(document).trigger("sessionLoaded");
                 }
             })
     </script>
@@ -65,9 +68,6 @@ type:当前用户类型，1为买家，0为卖家
 </div>
 <div class="main">
     {% block main %}{% endblock %}
-<div class="back-button-box">
-    <button class="back-button" onclick="history.back()">Back</button>
-</div>
 </div>
 </body>
 </html>
