--- a/templates/item.html
+++ b/templates/item.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block script %}
+    <script src="/static/js/render_comment.js"></script>
     <script>
 
     let belong;
@@ -13,22 +14,19 @@
         $(document).on("sessionLoaded", function () {
 
             {#页面渲染开始——————————————————————————————————————————————————————————————————————————————————————————#}
+{#        判断belong关系#}
             is_item_match_seller()
 
             render_item_data();
-            {#基础comment#}
+
             render_comment();
 
             {#buyer 购买#}
-            {% if belong==false %}
+            if (!belong) {
                 render_buyer_box();
-            {% endif %}
+            }
 
             {#buyer#}
-            {#    评论悬浮框#}
-            if (type === "1") {
-                render_self_comment();
-            }
         {#    页面渲染结束——————————————————————————————————————————————————————————————————————————————————————————#}
         });
     }
@@ -49,7 +47,7 @@
         })
     }
 
-    function render_item_data(){
+    function get_item_data(){
 
         $(".img-box").empty();
         $(".item-name").empty();
@@ -66,54 +64,58 @@
                 product_id: "{{ product_id }}"
             },
             success: function (data) {
-                let img;
-                let name;
-                let rating;
-                let price;
-                let storage
-                {#buyer/visiter#}
-                {% if belong==false %}
-
-                    img = document.createElement("img");
-                    name = document.createElement("span");
-                    rating = document.createElement("span");
-                    price = document.createElement("span");
-                    storage = document.createElement("span");
-
-                    img.setAttribute("src", data.src);
-                    name.innerText = data.name;
-                    rating.innerText = data.average_rating;
-                    price.innerText = data.price;
-                    storage.innerText = data.storage;
-                {% else %}
-                    img = document.createElement("img");
-                    name = document.createElement("input");
-                    rating = document.createElement("input");
-                    price = document.createElement("input");
-                    storage = document.createElement("input");
-
-                    img.setAttribute("src", data.src);
-                    name.value = data.name;
-
-                    rating.setAttribute("type", "text")
-                    rating.value = data.average_rating;
-
-                    price.setAttribute("type", "text")
-                    price.value = data.price;
-
-                    storage.setAttribute("type", "text")
-                    storage.value = data.storage;
-
-                {% endif %}
-
-                $(".img-box").append(img);name.setAttribute("type", "text")
-                $(".item-name").append(name);
-                $(".item-rating").append(rating);
-                $(".item-price").append(price);
-                $(".item-storage").append(storage);
-
+                render_item_data(data)
             }
         })
+    }
+
+    function render_item_data(data){
+        let img;
+        let name;
+        let rating;
+        let price;
+        let storage
+        {#buyer/visiter#}
+        {% if belong==false %}
+
+            img = document.createElement("img");
+            name = document.createElement("span");
+            rating = document.createElement("span");
+            price = document.createElement("span");
+            storage = document.createElement("span");
+
+            img.setAttribute("src", data.src);
+            name.innerText = data.name;
+            rating.innerText = data.average_rating;
+            price.innerText = data.price;
+            storage.innerText = data.storage;
+        {% else %}
+{#            seller#}
+            img = document.createElement("img");
+            name = document.createElement("input");
+            rating = document.createElement("input");
+            price = document.createElement("input");
+            storage = document.createElement("input");
+
+            img.setAttribute("src", data.src);
+            name.value = data.name;
+
+            rating.setAttribute("type", "text")
+            rating.value = data.average_rating;
+
+            price.setAttribute("type", "text")
+            price.value = data.price;
+
+            storage.setAttribute("type", "text")
+            storage.value = data.storage;
+
+        {% endif %}
+
+        $(".img-box").append(img);name.setAttribute("type", "text")
+        $(".item-name").append(name);
+        $(".item-rating").append(rating);
+        $(".item-price").append(price);
+        $(".item-storage").append(storage);
     }
 
     function render_buyer_box() {
@@ -151,65 +153,8 @@
         buy_box.append(buy_button);
     }
 
-    function render_self_comment() {
-        const comment_box = $(".self-comment-box");
-        comment_box.empty();
+    function get_basic_comment(){
 
-        const self_rating_div = document.createElement("div");
-        const self_rating = document.createElement("input");
-
-        self_rating_div.setAttribute("class", "self-rating-box");
-        self_rating.setAttribute("class", "self-rating");
-        self_rating.setAttribute("placeHolder", "rating");
-        self_rating.setAttribute("type", "number");
-
-
-        const self_content_div = document.createElement("div");
-        const self_content = document.createElement("input");
-
-        self_content_div.setAttribute("class", "self-content-box");
-        self_content.setAttribute("class", "self-content");
-        self_content.setAttribute("placeHolder", "content");
-        self_rating.setAttribute("type", "text");
-
-
-        const self_content_button = document.createElement("button");
-
-        self_content_button.setAttribute("id", "self-content-button");
-        self_content_button.innerText = "Submit->"
-        self_content_button.onclick = function () {
-            console.log(self_rating.value)
-            console.log(self_content.value)
-            $.ajax({
-                url: "/comment/createComment",
-                type: "get",
-                contentType: "application/json",
-                dataType: "json",
-                data: {
-                    buyer_phone: phone,
-                    content: self_content.value,
-                    rating: self_rating.value,
-                    product_id: "{{ product_id }}"
-                },
-                success:function (data){
-                    if (data.success){
-                        alert(data.message)
-                        render_comment();
-                    }else {
-                        alert(data.message)
-                    }
-                }
-            })
-        }
-        self_content_div.append(self_content);
-        self_rating_div.append(self_rating);
-        comment_box.append(self_rating_div);
-        comment_box.append(self_content_div);
-        comment_box.append(self_content_button);
-
-    }
-
-    function render_comment(){
         $.ajax({
             url: "/comment/commentBasicInfoById",
             type: "get",
@@ -219,38 +164,24 @@
                 product_id: "{{ product_id }}"
             },
             success: function (data) {
-                for (let i = 0; i < data.length; i++) {
-                    const comment = data[i];
-                    const comment_div = document.createElement("div");
-                    comment_div.setAttribute("class", "comment");
-                    comment_div.onmouseover = function (){
-                        comment_div.style.display = "block";
-                    }
-                    comment_div.onmouseout = function (){
-                        comment_div.style.display = "none";
-                    }
-
-                    const comment_rating_div = document.createElement("div");
-                    comment_rating_div.setAttribute("class", "comment-rating");
-                    const comment_rating = document.createElement("span");
-                    comment_rating.innerText = comment.rating;
-                    comment_rating_div.append(comment_rating);
-                    comment_div.append(comment_rating_div);
-
-                    const comment_content_div = document.createElement("div");
-                    comment_content_div.setAttribute("class", "comment-text");
-                    const comment_content = document.createElement("span");
-                    comment_content.innerText = comment.content;
-                    comment_content_div.append(comment_content);
-                    comment_div.append(comment_content_div);
-
-                    const comment_text = document.createComment("div");
-                    comment_text.innerText = comment.text;
-
-                    $(".item-comment-box").append(comment_div);
-                }
+                render_comment(data)
+                render_more_comment_button()
             }
         })
+    }
+
+    function render_more_comment_button(){
+        const more_comment_button_div = document.createElement("div");
+        const more_comment_button = document.createElement("button");
+
+        more_comment_button_div.setAttribute("class", "comment-text");
+        more_comment_button.innerText = "More Comment";
+        more_comment_button.onclick = function (){
+            window.location.href = "/comment";
+        }
+
+        more_comment_button_div.append(more_comment_button);
+        $(".item-comment-box").append(more_comment_button_div);
     }
     </script>
 {% endblock %}
@@ -291,7 +222,6 @@
 <div class="right-box">
     <div class="item-comment-box"></div>
     <div class="commenter_window"></div>
-    <div class="self-comment-box"></div>
 </div>
 
 <div class="back-button-box">
