--- a/templates/item.html
+++ b/templates/item.html
@@ -181,7 +181,7 @@
         }
 
         more_comment_button_div.append(more_comment_button);
-        $(".item-comment-box").append(more_comment_button_div);
+        $(".comment-box").append(more_comment_button_div);
     }
     </script>
 {% endblock %}
@@ -220,7 +220,7 @@
     </div>
 </div>
 <div class="right-box">
-    <div class="item-comment-box"></div>
+    <div class="comment-box"></div>
     <div class="commenter_window"></div>
 </div>
 
