--- a/templates/comment.html
+++ b/templates/comment.html
@@ -6,11 +6,12 @@
 
 {% block script %}
     <script src="/static/js/render_comment.js"></script>
-    <script src="/static/js/render_self_comment_box.js.js"></script>
+    <script src="/static/js/render_self_comment_box.js"></script>
     <script>
-    window.location = function (){
+    window.onload = function (){
         $(document).on("sessionLoaded", function() {
             get_comment();
+            render_self_comment_box();
             get_prev_page();
             get_next_page();
         })
@@ -18,7 +19,7 @@
 
     function get_comment(){
         $.ajax({
-            url:"/commentInfoById",
+            url:"/comment/commentInfoById",
             type:"get",
             contentType: "application/json",
             dataType: "json",
@@ -88,6 +89,7 @@
 
 {% block main %}
     <div class="comment-box"></div>
+    <div class="self-comment-box"></div>
     <div class="prev"></div>
     <div class="next"></div>
 {% endblock %}
