--- a/templates/comment.html
+++ b/templates/comment.html
@@ -6,9 +6,12 @@
 
 {% block script %}
     <script src="/static/js/render_comment.js"></script>
-    <script src="/static/js/render_self_comment_box.js"></script>
     <script>
+    let page_num;
+
     window.onload = function (){
+
+        page_num = 1;
         $(document).on("sessionLoaded", function() {
             get_comment();
             render_self_comment_box();
@@ -27,8 +30,8 @@
                 product_id:"{{ product_id }}",
                 phone:phone,
             },
-            success:function(){
-                render_comment();
+            success:function(data){
+                render_comment(data);
             }
         })
     }
@@ -46,7 +49,7 @@
 
     function get_next_page(){
         $.ajax({
-            url:"/shop/hasNextPage",
+            url:"/comment/hasNextComment",
             type:"get",
             contentType: "application/json",
             dataType: "json",
@@ -78,6 +81,67 @@
         if (page_num>1){
             render_prev_page_button()
         }
+    }
+
+    function render_self_comment_box() {
+        const self_comment_box = $(".self-comment-box");
+        self_comment_box.empty();
+
+        const self_rating_div = document.createElement("div");
+        const self_rating = document.createElement("input");
+
+        self_rating_div.setAttribute("class", "self-rating-box");
+        self_rating.setAttribute("class", "self-rating");
+        self_rating.setAttribute("placeHolder", "rating");
+        self_rating.setAttribute("type", "number");
+
+        self_comment_box.append(self_rating_div);
+        self_rating_div.append(self_rating);
+
+        const self_content_div = document.createElement("div");
+        const self_content = document.createElement("input");
+
+        self_content_div.setAttribute("class", "self-content-box");
+        self_content.setAttribute("class", "self-content");
+        self_content.setAttribute("placeHolder", "content");
+        self_rating.setAttribute("type", "text");
+
+        self_comment_box.append(self_content_div);
+        self_content_div.append(self_content);
+
+        const self_content_button = document.createElement("button");
+
+        self_content_button.setAttribute("id", "self-content-button");
+        self_content_button.innerText = "Submit->"
+        self_content_button.onclick = function () {
+            create_comment(self_rating.value, self_content.value)
+        }
+
+        self_comment_box.append(self_content_button);
+
+    }
+
+    function create_comment(rating, content){
+        $.ajax({
+            url: "/comment/createComment",
+            type: "get",
+            contentType: "application/json",
+            dataType: "json",
+            data: {
+                buyer_phone:phone,
+                product_id:"{{ product_id }}",
+                rating:rating,
+                content:content
+            },
+            success:function (data){
+                if (data.success){
+                    alert(data.message)
+                    get_comment();
+                }else {
+                    alert(data.message)
+                }
+            }
+        })
     }
 
     </script>
